@@ -1,5 +1,7 @@
 Version 2.5.5dev:
 
+* Dual joystick/mouse mode for joystick port 0.
+* Show gui_message notifications from UAE code.
 * Added missing @docdir@ substitution variable.
 * More build system updates / removed old cruft.
 * BSD make should now also work (in addition to GNU make).
